--- a/latex/in_header.tex
+++ b/latex/in_header.tex
@@ -1,3 +1,3 @@
 \usepackage{fvextra}
-\DefineVerbatimEnvironment{Highlighting}{Verbatim}{breaklines,commandchars=\\\{\}}
+\DefineVerbatimEnvironment{Highlighting}{Verbatim}{breaklines,breaksymbolleft=,commandchars=\\\{\}}
 \frontmatter
